--- a/src/css/userPickStyles.css
+++ b/src/css/userPickStyles.css
@@ -1,15 +1,31 @@
-.choice-group{
-    display:inline-block;
+/* .choice-group{
+     display:inline-block; 
     height:45vh;
     width:29%;
-}
+} */
 
-.choice-tiles{
+/* .choice-tiles{
     background-color:lightblue;
-    height:15vh;
+    /* height:15vh;
+    width:33%; 
     border:3px outset grey;
     text-align: center;
     line-height: 65px;
+    margin-right:0;
+}
+
+*/
+
+
+.choice-group{
+    text-align: center;
+}
+
+.choice-tiles{
+    display:inline-block;
+    border:1px dashed red;
+    width:31%;
+    margin:0 5px;
 }
 
 .choice-tiles:active{
@@ -17,9 +33,3 @@
     border:3px inset grey;
 }
 
-.user-image{
-
-    display:inline-block;
-    width:50%;
-    text-align: right;
-}
